Add Docker integration with Postgres and containerize the app
Introduce Docker Compose configuration with a Postgres container. Create and store conversations in the ''conversations'' table. Allow the entire application to run inside Docker

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 OPENAI_API_KEY=your-key-here
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
+POSTGRES_DB=mydatabase
+
+# Build the database URL for SQLAlchemy.
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
