--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -6,8 +6,13 @@ WORKDIR /app
 
 # Copy the requirements file and install dependencies
 COPY requirements.txt requirements.txt
-RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Copy the entire application code to the container
 COPY . .
+
+# Expose the port FastAPI will run on
+EXPOSE 8000
+
+# Command to run FastAPI application with Uvicorn
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
