--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,16 @@ services:
     ports:
       - "8000:8000"
 
+  streamlit:
+    build:
+      context: .
+      dockerfile: Dockerfile.streamlit
+    depends_on:
+      - fastapi
+    env_file:
+      - .env
+    ports:
+      - "8501:8501"
+
 volumes:
   pgdata:
