--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-openai
-sqlalchemy
-psycopg2-binary
-fastapi
-uvicorn
-streamlit
-requests
-langchain
-langchain-openai
-langchain-community
+openai>=1.0.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+fastapi>=0.95.0
+uvicorn>=0.22.0
+streamlit>=1.22.0
+requests>=2.28.0
+langchain>=0.1.17
+langchain-openai>=0.0.2
+langchain-community>=0.0.10
